--- a/Registro.html
+++ b/Registro.html
@@ -41,13 +41,10 @@
         <div class="nested-grid-registro">
             <div class="nested-grid-registro-img"><i class="fa fa-user-circle-o"></i></div>
             <div></div>
-            <div></div>
-            <div> <label for="">Usuario</label> </div>
-            <div><input type="text" name="" id="" placeholder="Ingrese el usuario a registrar"></div>
-            <div> <label for="">Contraseña</label></div>
-            <div><input type="password" name="" id="" placeholder="Ingrese la contraseña a registrar"></div>
-            <div> <label for="">Confirmar Contraseña</label></div>
-            <div><input type="password" name="" id="" placeholder="Confirmar contraseña ingresada"></div>
+            <div><input type="text" name="" id="" placeholder="Usuario"></div>
+
+            <div><input type="password" name="" id="" placeholder="Contraseña"></div>
+ <div><input type="password" name="" id="" placeholder="Confirmar Contraseña"></div>
             <div class="nested-grid-registro-button"><a href="./index.html"><button type="submit">Registrar</button></a></div>
         </div>
     </section>
