Commit Responsive index.html y styles.css

--- a/index.html
+++ b/index.html
@@ -107,7 +107,6 @@
     </section>
     <div class="footer-container">
         <div class="footer">
-          
           <div class="footer-heading footer-1">
             <h4>Catálogos</h4>
             <a href="./PlayStation.html">Play Station</a>
@@ -124,6 +123,7 @@
             <h4>Sobre Nosotros</h4>
             <a href="#">¿Quiénes somos?</a>
             <a href="#">Contacto</a>
+            <a href="#">Registro</a>
           </div>
           <div class="footer-heading social_links">
             <h4>Redes Sociales</h4>
