Commit 1 Proyecto 2 Cambios index, se agregó Anime.html

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                         <li><a href="./PlayStation.html">Play Station</a></li>
                         <li><a href="./Nintendo.html">Nintendo Switch</a></li>
                         <li><a href="./Microsoft.html">Xbox One</a></li>
+                        <li><a href="./Anime.html">Registro Animes</a></li>
                     </ul>
                 </li>
                 <li><a href="#">¿Quiénes Somos?</a></li>
@@ -112,6 +113,7 @@
             <a href="./PlayStation.html">Play Station</a>
             <a href="./Nintendo.html">Nintendo</a>
             <a href="./Microsoft.html">Xbox</a>
+            <a href="./Anime.html">Registro Animes</a>
           </div>
           <div class="footer-heading footer-2">
             <h4>Adicionales</h4>
@@ -137,8 +139,8 @@
             <i class="fas fa-globe-europe"></i> México
             <p><br><i class="far fa-copyright"></i> 2022 Videojuegos</p>
           </div>   
-        
       </div>
+      <script src="index.js"></script>
 </body>
 
 </html>
