Commit 3 - Se agregó imagen Anime y edición Anime.html

--- a/Anime.html
+++ b/Anime.html
@@ -47,6 +47,15 @@
             </ul>
         </nav>
     </header>
+
+    <section class="jumbotron">
+        <img class="jumbotron-img" src="./assets/images/anime-devochki-madoka-magic.jpg" alt=""
+            class="jumbotron-img">
+        <div class="jumbotron-column">
+            <h1 class="jumbotron-column-title">¡Lleva el control de tus Animes Favoritos!</h1>
+            <p>¡Puedes llevar un registro de las series que estás viendo!</p>
+        </div>
+    </section>
     <section class="container mt-5" id="section-anime">
         <h1><i class="material-icons">tv</i>
             Registro de Anime
