--- a/Anime.html
+++ b/Anime.html
@@ -49,11 +49,11 @@
     </header>
 
     <section class="jumbotron">
-        <img class="jumbotron-img" src="./assets/images/anime-devochki-madoka-magic.jpg" alt=""
+        <img class="jumbotron-img" src="./assets/images/playstation-xbox-switch-nintendo-sony-microsoft.jpg" alt=""
             class="jumbotron-img">
         <div class="jumbotron-column">
-            <h1 class="jumbotron-column-title">¡Lleva el control de tus Animes Favoritos!</h1>
-            <p>¡Puedes llevar un registro de las series que estás viendo!</p>
+            <h1 class="jumbotron-column-title">¡Lleva el control de tus Videojuegos Favoritos!</h1>
+            <p>¡Puedes llevar un registro de los juegos que vas jugando!</p>
         </div>
     </section>
     <section class="container mt-5" id="section-anime">
@@ -66,10 +66,10 @@
             <select name="genero" id="genero" class="form-select" aria-label="Default select example">
                 <option selected>Elige un género</option>
                 <option value="Acción">Acción</option>
-                <option value="Magia">Magia</option>
-                <option value="Romance">Romance</option>
+                <option value="Plataforma">Plataforma</option>
+                <option value="RPG">RPG</option>
                 <option value="Pelea">Pelea</option>
-                <option value="Terror">Terror</option>
+                <option value="Puzzle">Puzzle</option>
             </select><br>
            <select name="estatus" id="estatus" class="form-select" aria-label="Default select example">
                 <option selected>Estatus</option>
@@ -84,7 +84,7 @@
         <section id="listadoanimes" class="mt-4">
             <div class="alert alert-danger" role="alert">
                 <i class="material-icons">tv</i>
-                <b>Título de la serie de Anime</b> - Género - Estatus
+                <b>Título del Videojuego</b> - Género - Estatus
                 <span class="float-right">
                     <i class="material-icons">
                         done
