--- a/VGamesRegistro.html
+++ b/VGamesRegistro.html
@@ -103,7 +103,7 @@
             <a href="./PlayStation.html">Play Station</a>
             <a href="./Nintendo.html">Nintendo</a>
             <a href="./Microsoft.html">Xbox</a>
-            <a href="./Anime.html">Registro Animes</a>
+            <a href="./VGamesRegistro.html">Registro Videjuegos</a>
           </div>
           <div class="footer-heading footer-2">
             <h4>Adicionales</h4>
