Commit 7 Cambio de liga Registro Videojuegos

--- a/Registro.html
+++ b/Registro.html
@@ -58,6 +58,7 @@
                 <a href="./PlayStation.html">Play Station</a>
                 <a href="./Nintendo.html">Nintendo</a>
                 <a href="./Microsoft.html">Xbox</a>
+                <a href="./VGamesRegistro.html">Registro Videojuegos</a>
             </div>
             <div class="footer-heading footer-2">
                 <h4>Adicionales</h4>
