--- a/VGamesRegistro.html
+++ b/VGamesRegistro.html
@@ -115,7 +115,7 @@
             <h4>Sobre Nosotros</h4>
             <a href="#">¿Quiénes somos?</a>
             <a href="#">Contacto</a>
-            <a href="#">Registro</a>
+            <a href="./VGamesRegistro.html">Registro Videojuegos</a>
           </div>
           <div class="footer-heading social_links">
             <h4>Redes Sociales</h4>
