Commit 8 -  Rol Anime a Videojuegos

--- a/VGamesRegistro.html
+++ b/VGamesRegistro.html
@@ -13,8 +13,6 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
  
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -49,19 +47,19 @@
     </header>
 
     <section class="jumbotron">
-        <img class="jumbotron-img" src="./assets/images/playstation-xbox-switch-nintendo-sony-microsoft.jpg" alt=""
+        <img class="jumbotron-img" src="./assets/images/sonic-crash-mario.jpg" alt=""
             class="jumbotron-img">
         <div class="jumbotron-column">
             <h1 class="jumbotron-column-title">¡Lleva el control de tus Videojuegos Favoritos!</h1>
             <p>¡Puedes llevar un registro de los juegos que vas jugando!</p>
         </div>
     </section>
-    <section class="container mt-5" id="section-anime">
+    <section class="container mt-5" id="section-videojuegos">
         <h1><i class="material-icons">tv</i>
-            Registro de Anime
+            Registro de Videojuegos
         </h1>
 
-        <form action="" id="anime-form">
+        <form action="" id="videojuego-form">
             <input type="text" name="" id="titulo" class="form-control my-3" placeholder="Título de la serie">
             <select name="genero" id="genero" class="form-select" aria-label="Default select example">
                 <option selected>Elige un género</option>
@@ -81,7 +79,7 @@
         </form>
         <br>
 
-        <section id="listadoanimes" class="mt-4">
+        <section id="listadovideojuegos" class="mt-4">
             <div class="alert alert-danger" role="alert">
                 <i class="material-icons">tv</i>
                 <b>Título del Videojuego</b> - Género - Estatus
