--- a/Registro.html
+++ b/Registro.html
@@ -44,8 +44,9 @@
             <div><input type="text" name="" id="" placeholder="Usuario"></div>
 
             <div><input type="password" name="" id="" placeholder="Contraseña"></div>
- <div><input type="password" name="" id="" placeholder="Confirmar Contraseña"></div>
-            <div class="nested-grid-registro-button"><a href="./index.html"><button type="submit">Registrar</button></a></div>
+            <div><input type="password" name="" id="" placeholder="Confirmar Contraseña"></div>
+            <div class="nested-grid-registro-button"><a href="./index.html"><button type="submit">Registrar</button></a>
+            </div>
         </div>
     </section>
 
