Commit 9 cambio de placeholder

--- a/VGamesRegistro.html
+++ b/VGamesRegistro.html
@@ -60,7 +60,7 @@
         </h1>
 
         <form action="" id="videojuego-form">
-            <input type="text" name="" id="titulo" class="form-control my-3" placeholder="Título de la serie">
+            <input type="text" name="" id="titulo" class="form-control my-3" placeholder="Título del Videojuego">
             <select name="genero" id="genero" class="form-select" aria-label="Default select example">
                 <option selected>Elige un género</option>
                 <option value="Acción">Acción</option>
