Commit 10 - Se agregó nuevo género - Carreras

--- a/VGamesRegistro.html
+++ b/VGamesRegistro.html
@@ -68,6 +68,7 @@
                 <option value="RPG">RPG</option>
                 <option value="Pelea">Pelea</option>
                 <option value="Puzzle">Puzzle</option>
+                <option value="Carreras">Carreras</option>
             </select><br>
            <select name="estatus" id="estatus" class="form-select" aria-label="Default select example">
                 <option selected>Estatus</option>
